Updated homepage design

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VacationVisits - Explore The World</title>
-    <meta name="description" content="VacationVisits is a premium travel agency in India offering Dubai deals, Thailand tours, Maldives vacations, domestic getaways, visa services, hotel bookings, and curated travel packages at honest prices.">
+    <meta name="description" content="VacationVisits - Explore The World. Affordable travel packages for Dubai, Thailand, Maldives, and more.">
     <link rel="canonical" href="https://vacationvisits.in/">
-    <link rel="icon" href="/vacation_logo.png" type="image/png">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
